@@ -39,18 +39,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - python-version: '3.7'
-            gdal-version: '3.4.3'
-          - python-version: '3.8'
+          - python-version: '3.9'
             gdal-version: '3.4.3'
           - python-version: '3.9'
             gdal-version: '3.5.3'
           - python-version: '3.10'
             gdal-version: '3.6.4'
           - python-version: '3.11'
-            gdal-version: '3.7.1'
+            gdal-version: '3.7.3'
           - python-version: '3.12'
-            gdal-version: '3.7.1'
+            gdal-version: '3.8.3'
 
     steps:
       - uses: actions/checkout@v4
@@ -94,9 +92,9 @@ jobs:
       matrix:
         include:
           - os: macos-latest
-            python-version: '3.10'
+            python-version: '3.11'
           - os: windows-latest
-            python-version: '3.10'
+            python-version: '3.11'
     steps:
       - uses: actions/checkout@v4
 
@@ -111,7 +109,7 @@ jobs:
         run: |
           conda config --prepend channels conda-forge
           conda config --set channel_priority strict
-          conda create -n test python=${{ matrix.python-version }} libgdal geos=3.10.3 cython=3
+          conda create -n test python=${{ matrix.python-version }} libgdal geos=3.10.3 cython=3 "numpy>=1.25,<2"
           source activate test
           python -m pip install -e . || python -m pip install -e .
           python -m pip install -r requirements-dev.txt
@@ -122,7 +120,7 @@ jobs:
         run: |
           conda config --prepend channels conda-forge
           conda config --set channel_priority strict
-          conda create -n test python=${{ matrix.python-version }} libgdal geos=3.10.3 cython=3
+          conda create -n test python=${{ matrix.python-version }} libgdal geos=3.10.3 cython=3 "numpy>=1.25,<2"
           source activate test
           GDAL_VERSION="3.5" python setup.py build_ext -I"C:\\Miniconda\\envs\\test\\Library\\include" -lgdal_i -L"C:\\Miniconda\\envs\\test\\Library\\lib" install
           python -m pip install -r requirements-dev.txt
