@@ -7,6 +7,7 @@ dependencies:
 - python=3.9.*
 - libgdal=3.4.*
 - cython=3
+- numpy>=1.25,<2
 - sphinx-click
 - sphinx-rtd-theme
 - pip:
